--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,6 +1,6 @@
 ---
 ---
 
-@use "base";
-@use "vars";
-@use "bootstrap-5.3.8/scss/bootstrap.scss"
+@import "base";
+@import "vars";
+@import "bootstrap-5.3.8/scss/bootstrap.scss"
