Adding more Content and Layouting

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
     <div class="wrapper">
       <h2>{{ page.title }}</h2>
       <hr>
+      <div class="row">
       {{ content }}
+      </div>
       <hr>
       {% include footer.html %}
     </div>
