Migrating more Content, Fixing Layouting and Coloring

--- a/_includes/legal/rights.html
+++ b/_includes/legal/rights.html
@@ -1,7 +1,9 @@
 <div class="item">
-    <div class="wrapper-rounded">
-    	<h3>Recht auf Auskunft, L&ouml;schung, Sperrung</h3>
+    <div class="card">
+        <div class="card-body">
+    	<h3 class="card-title">Recht auf Auskunft, L&ouml;schung, Sperrung</h3>
         <hr>
-	  	<p>Sie haben jederzeit das Recht auf unentgeltliche Auskunft &uuml;ber Ihre gespeicherten personenbezogenen Daten, deren Herkunft und Empf&auml;nger und den Zweck der Datenverarbeitung sowie ein Recht auf Berichtigung, Sperrung oder L&ouml;schung dieser Daten. Hierzu sowie zu weiteren Fragen zum Thema personenbezogene Daten k&ouml;nnen Sie sich jederzeit unter der im Impressum angegebenen Adresse an uns wenden.</p>
+	  	<p class="card-text">Sie haben jederzeit das Recht auf unentgeltliche Auskunft &uuml;ber Ihre gespeicherten personenbezogenen Daten, deren Herkunft und Empf&auml;nger und den Zweck der Datenverarbeitung sowie ein Recht auf Berichtigung, Sperrung oder L&ouml;schung dieser Daten. Hierzu sowie zu weiteren Fragen zum Thema personenbezogene Daten k&ouml;nnen Sie sich jederzeit unter der im Impressum angegebenen Adresse an uns wenden.</p>
+    </div>
     </div>
 </div>
