--- a/_includes/verein.html
+++ b/_includes/verein.html
@@ -1,7 +1,9 @@
-<div class="wrapper-rounded">
-	<h3>Der Verein</h3>
+<div class="card">
+    <div class="card-body">
+	<h3 class="card-title">Der Verein</h3>
 	<hr>
-    <a href="/der-verein/mitglieder"><img class="img-thumbnail" src="assets/media/00_Alle bearbeitet.png"/></a>
+    <a href="/der-verein/mitglieder"><img class="card-img-top" src="assets/media/00_Alle bearbeitet.png"/></a>
     <hr>
-    <p>Unser Musikverein besteht zurzeit aus 38&nbsp;aktiven, 82&nbsp;passiven, 17&nbsp;Ehrenmitglieder und 18&nbsp;Jungmusiker. Er hat sich zur Aufgabe gemacht das kulturelle Leben in unserem Ort zu gestalten und den Jugendlichen das erlernen eines Instrumentes zu erm&ouml;glichen. Die Kapelle trifft sich jeden Freitag zur Probe, um viele anspruchsvolle Werke der Blasmusik zu erarbeiten.</p>
+    <p class="card-text">Unser Musikverein besteht zurzeit aus 38&nbsp;aktiven, 82&nbsp;passiven, 17&nbsp;Ehrenmitglieder und 18&nbsp;Jungmusiker. Er hat sich zur Aufgabe gemacht das kulturelle Leben in unserem Ort zu gestalten und den Jugendlichen das erlernen eines Instrumentes zu erm&ouml;glichen. Die Kapelle trifft sich jeden Freitag zur Probe, um viele anspruchsvolle Werke der Blasmusik zu erarbeiten.</p>
+    </div>
 </div>
