--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <body>
     {% include navigation.html %}
     <!-- Content -->
-    <div class="wrapper">
+    <div class="container mt-3">
       <h2>{{ page.title }}</h2>
       <hr>
       <div class="row">
@@ -16,8 +16,7 @@
       {% include footer.html %}
     </div>
     <!-- Content End -->
-    <script type="text/javascript" src="/assets/js/jquery-3.7.1.min.js"></script>
-    <script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/assets/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="/assets/js/salvattore.js"></script>
     <script type="text/javascript" src="/assets/js/fontawesome.min.js"></script>
   </body>
