--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,9 +2,10 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<meta name="description" content="{{ site.description }}">
+<!--<meta name="description" content="{{ site.description }}">-->
 <meta name="title" content="{{ site.title }}">
 <meta name="author" content="Mathias Kessler">
+<meta name="theme-color" content="#0255a3">
 <link rel="apple-touch-icon" sizes="180x180" href="{{ 'assets/favicon/apple-touch-icon.png'| relative_url }}">
 <link rel="icon" type="image/png" sizes="32x32" href="{{ 'assets/favicon/favicon-32x32.png'| relative_url }}">
 <link rel="icon" type="image/png" sizes="16x16" href="{{ 'assets/favicon/favicon-16x16.png'| relative_url }}">
