--- a/_includes/kapelle/schlagzeug.html
+++ b/_includes/kapelle/schlagzeug.html
@@ -1,7 +1,7 @@
 <div class="item card">
   <img src='/assets/media/register/14_Schlagzeug.jpg' class="card-img-top">
   <div class="card-body">
-    <h3 class="card-title">Schlagzeu</h3>
+    <h3 class="card-title">Schlagzeug</h3>
     <ul class="list-group list-group-flush">
       <li class="list-group-item">Martin Hermanutz</li>
       <li class="list-group-item">Simon Mesam</li>
