--- a/_includes/legal/ads.html
+++ b/_includes/legal/ads.html
@@ -1,7 +1,11 @@
 <div class="item">
-    <div class="wrapper-rounded">
-    	<h3>Widerspruch Werbe-Mails</h3>
+    <div class="card">
+      <div class="card-body">
+        <h3 class="card-title">Widerspruch Werbe-Mails</h3>
         <hr>
-	  	<p>Der Nutzung von im Rahmen der Impressumspflicht ver&ouml;ffentlichten Kontaktdaten zur &Uuml;bersendung von nicht ausdr&uuml;cklich angeforderter Werbung und Informationsmaterialien wird hiermit widersprochen. Die Betreiber der Seiten behalten sich ausdr&uuml;cklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa durch Spam-E-Mails, vor.</p>
+        <p class="card-text">
+          Der Nutzung von im Rahmen der Impressumspflicht ver&ouml;ffentlichten Kontaktdaten zur &Uuml;bersendung von nicht ausdr&uuml;cklich angeforderter Werbung und Informationsmaterialien wird hiermit widersprochen. Die Betreiber der Seiten behalten sich ausdr&uuml;cklich rechtliche Schritte im Falle der unverlangten Zusendung von Werbeinformationen, etwa durch Spam-E-Mails, vor.
+        </p>
+      </div>
     </div>
 </div>
