--- a/_includes/legal/logs.html
+++ b/_includes/legal/logs.html
@@ -1,15 +1,18 @@
 <div class="item">
-    <div class="wrapper-rounded">
-    	<h3>Server-Logs</h3>
+    <div class="card">
+      <div class="card-body">
+    	<h3 class="card-title">Server-Logs</h3>
         <hr>
-	  	<p>Der Provider der Seiten erhebt und speichert automatisch Informationen in so genannten Server-Log Files, die Ihr Browser automatisch an uns &uuml;bermittelt. Dies sind:</p>
-      <ul>
-        <li>Browsertyp und Browserversion</li>
-        <li>verwendetes Betriebssystem</li>
-        <li>Referrer URL</li>
-        <li>Hostname des zugreifenden Rechners</li>
-        <li>Uhrzeit der Serveranfrage</li>
+	  	<p class="card-text">Der Provider der Seiten erhebt und speichert automatisch Informationen in so genannten Server-Log Files, die Ihr Browser automatisch an uns &uuml;bermittelt. Dies sind:</p>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Browsertyp und Browserversion</li>
+        <li class="list-group-item">verwendetes Betriebssystem</li>
+        <li class="list-group-item">Referrer URL</li>
+        <li class="list-group-item">Hostname des zugreifenden Rechners</li>
+        <li class="list-group-item">Uhrzeit der Serveranfrage</li>
       </ul>
-      <p>Diese Daten sind nicht bestimmten Personen zuordenbar. Eine Zusammenf&uuml;hrung dieser Daten mit anderen Datenquellen wird nicht vorgenommen. Wir behalten uns vor, diese Daten nachtr&auml;glich zu pr&uuml;fen, wenn uns konkrete Anhaltspunkte f&uuml;r eine rechtswidrige Nutzung bekannt werden.</p>
+      <br>
+      <p class="card-text">Diese Daten sind nicht bestimmten Personen zuordenbar. Eine Zusammenf&uuml;hrung dieser Daten mit anderen Datenquellen wird nicht vorgenommen. Wir behalten uns vor, diese Daten nachtr&auml;glich zu pr&uuml;fen, wenn uns konkrete Anhaltspunkte f&uuml;r eine rechtswidrige Nutzung bekannt werden.</p>
+    </div>
     </div>
 </div>
