--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,39 +1,35 @@
 <!-- Navigation -->
-<nav class="navbar navbar-info navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="light">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">
-            {{ site.title }}
-            </a>
-        </div>
+        <a class="navbar-brand" href="/">
+        {{ site.title }}
+        </a>
+        <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="{% if page.url == '/' %}active{% endif %}">
-                    <a href="{% link partnerkapelle.html %}">Partner</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav d-flex">
+                <li class="nav-item">
+                    <a class="nav-link {% if page.url == '/partnerkapelle.html' %}active{% endif %}" aria-current="{%if page.url == '/partnerkapelle.html' %}page{% endif %}" href="{% link partnerkapelle.html %}">Partner</a>
                 </li>
-                <li class="{% if page.url == '/jugend.html' %}active{% endif %}">
-                    <a href="{% link jugend.html %}">Jugend</a>
+                <li class="nav-item">
+                    <a class="nav-link {% if page.url == '/jugend.html' %}active{% endif %}" aria-current="{%if page.url == '/jugend.html' %}page{% endif %}" href="{% link jugend.html %}">Jugend</a>
                 </li>
-                <li class="{% if page.url == '/downloads.html' %}active {% endif %}">
-                    <a href="{% link downloads.html %}">Downloads</a>
+                <li class="nav-item">
+                    <a class="nav-link {% if page.url == '/downloads.html' %}active{% endif %}" aria-current="{%if page.url == '/downloads.html' %}page{% endif %}" href="{% link downloads.html %}">Downloads</a>
                 </li>
-                <li class="dropdown {% if page.url == 'der-verein/*.html' %}active {% endif %}">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Der Verein <span class="caret"></span></a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Der Verein <span class="caret"></span>
+                  </a>
                   <ul class="dropdown-menu">
-                    <li><a href="{% link der-verein/historie.html %}">Historie</a></li>
-                    <li><a href="{% link der-verein/vorstandschaft.html %}">Die Vorstandschaft</a></li>
-                    <li><a href="{% link der-verein/mitglieder.html %}">Die Kapelle</a></li>
+                    <li><a class="dropdown-item" href="{% link der-verein/historie.html %}">Historie</a></li>
+                    <li><a class="dropdown-item" href="{% link der-verein/vorstandschaft.html %}">Die Vorstandschaft</a></li>
+                    <li><a class="dropdown-item" href="{% link der-verein/mitglieder.html %}">Die Kapelle</a></li>
                   </ul>
                 </li>
-                <li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
