--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,12 +1,16 @@
-<div class="wrapper-rounded">
-    <h3>Social Media</h3>
+<div class="card">
+    <div class="card-body">
+    <h3 class="card-title">Social Media</h3>
     <hr>
-    <div class="row no-gutters">
-        <div class="col-sm-6">
-            <a href="https://www.facebook.com/people/Musikverein-Hart-eV/100066495306368/" class="fa-brands fa-facebook" target="_blank" rel="noopener noreferrer"></a>
+    <div class="container">
+    <div class="row">
+        <div class="col">
+            <a href="https://www.facebook.com/people/Musikverein-Hart-eV/100066495306368/" class="fa-btn fa-brands fa-facebook" target="_blank" rel="noopener noreferrer"></a>
         </div>
-        <div class="col-sm-6">
-            <a href="https://www.instagram.com/musikverein_hart/" class="fa-brands fa-instagram" target="_blank" rel="noopener noreferrer"></a>
+        <div class="col">
+            <a href="https://www.instagram.com/musikverein_hart/" class="fa-btn fa-brands fa-instagram" target="_blank" rel="noopener noreferrer"></a>
         </div>
+    </div>
+    </div>
     </div>
 </div>
