--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,11 +1,23 @@
-$backgroundColor: #ffffff;
 $bodyColor: #000000;
+
+@font-face {
+  font-family: 'TrajanProRegular';
+  src: url('/assets/fonts/TrajanPro-Regular.ttf') format('truetype');
+}
+
 $bodyFont: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
 
+
 body {
-  background: $backgroundColor;
-  color: $bodyColor;
-  font-family: $bodyFont;
+  font-family: $bodyFont !important; 
+}
+
+h2 {
+  font-family: TrajanProRegular !important; 
+}
+
+h3 {
+  font-family: TrajanProRegular !important; 
 }
 
 p {
@@ -176,17 +188,17 @@ z-index: 1000000;
 
 /* Font Awesome Styles */
 /* Style all font awesome icons */
-.fa {
+.fa-btn {
 padding: 20px;
 font-size: 30px;
 border: 5px solid;
-width: 100%;
+width: 100% !important;
 text-align: center;
 text-decoration: none;
 }
 
 /* Add a hover effect if you want */
-.fa:hover {
+.fa-btn:hover {
 opacity: 0.7;
 color: white;
 text-decoration: none;
