Additional Layout-Changes and Cleanup

--- a/_includes/kapelle/saxophon.html
+++ b/_includes/kapelle/saxophon.html
@@ -1,14 +1,16 @@
-<div class="item card">
-  <img src='/assets/media/register/09_Saxos.jpg' class="card-img-top">
-  <div class="card-body">
-    <h3 class="card-title">Saxophon</h3>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Hubert Fechter</li>
-      <li class="list-group-item">Tanja Fechter</li>
-      <li class="list-group-item">Lisa Rapp</li>
-      <li class="list-group-item">Rosi Maier</li>
-      <li class="list-group-item">Simone Grimm</li>
-      <li class="list-group-item">Philipp Weißhaar</li>
-    </ul>
+<div class="item ">
+  <div class="card">
+    <img src='/assets/media/register/09_Saxos.webp' class="card-img-top">
+    <div class="card-body">
+      <h3 class="card-title">Saxophon</h3>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Hubert Fechter</li>
+        <li class="list-group-item">Tanja Fechter</li>
+        <li class="list-group-item">Lisa Rapp</li>
+        <li class="list-group-item">Rosi Maier</li>
+        <li class="list-group-item">Simone Grimm</li>
+        <li class="list-group-item">Philipp Weißhaar</li>
+      </ul>
+    </div>
   </div>
 </div>
