--- a/_includes/kapelle/schlagzeug.html
+++ b/_includes/kapelle/schlagzeug.html
@@ -1,10 +1,12 @@
-<div class="item card">
-  <img src='/assets/media/register/14_Schlagzeug.jpg' class="card-img-top">
-  <div class="card-body">
-    <h3 class="card-title">Schlagzeug</h3>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Martin Hermanutz</li>
-      <li class="list-group-item">Simon Mesam</li>
-    </ul>
+<div class="item">
+  <div class="card">
+    <img src='/assets/media/register/14_Schlagzeug.webp' class="card-img-top">
+    <div class="card-body">
+      <h3 class="card-title">Schlagzeug</h3>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Martin Hermanutz</li>
+        <li class="list-group-item">Simon Mesam</li>
+      </ul>
+    </div>
   </div>
 </div>
