--- a/_includes/kapelle/tenorhorn.html
+++ b/_includes/kapelle/tenorhorn.html
@@ -1,13 +1,15 @@
-<div class="item card">
-  <img src='/assets/media/register/12_Tenorhorn.jpg' class="card-img-top">
-  <div class="card-body">
-    <h3 class="card-title">Tenorhorn & Bariton</h3>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Wolfgang Fechter</li>
-      <li class="list-group-item">Markus Bieger</li>
-      <li class="list-group-item">Egidius Wild</li>
-      <li class="list-group-item">Ingo Bisinger</li>
-      <li class="list-group-item">Thomas Edelmann</li>
-    </ul>
+<div class="item">
+  <div class="card">
+    <img src='/assets/media/register/12_Tenorhorn.webp' class="card-img-top">
+    <div class="card-body">
+      <h3 class="card-title">Tenorhorn & Bariton</h3>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Wolfgang Fechter</li>
+        <li class="list-group-item">Markus Bieger</li>
+        <li class="list-group-item">Egidius Wild</li>
+        <li class="list-group-item">Ingo Bisinger</li>
+        <li class="list-group-item">Thomas Edelmann</li>
+      </ul>
+    </div>
   </div>
 </div>
