--- a/_includes/kapelle/trompete.html
+++ b/_includes/kapelle/trompete.html
@@ -1,16 +1,18 @@
-<div class="item card">
-  <img src='/assets/media/register/11_Trompeten.jpg' class="card-img-top">
-  <div class="card-body">
-    <h3 class="card-title">Trompete & Flügelhorn</h3>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Dieter Klingler</li>
-      <li class="list-group-item">Chris Reger</li>
-      <li class="list-group-item">Sabrina Konsdorf</li>
-      <li class="list-group-item">Harald Stocker</li>
-      <li class="list-group-item">Jan Klingler</li>
-      <li class="list-group-item">Tobias Schweizer</li>
-      <li class="list-group-item">Markus Klingler</li>
-      <li class="list-group-item">Florian Klingler</li>
-    </ul>
+<div class="item">
+  <div class="card">
+    <img src='/assets/media/register/11_Trompeten.webp' class="card-img-top">
+    <div class="card-body">
+      <h3 class="card-title">Trompete & Flügelhorn</h3>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">Dieter Klingler</li>
+        <li class="list-group-item">Chris Reger</li>
+        <li class="list-group-item">Sabrina Konsdorf</li>
+        <li class="list-group-item">Harald Stocker</li>
+        <li class="list-group-item">Jan Klingler</li>
+        <li class="list-group-item">Tobias Schweizer</li>
+        <li class="list-group-item">Markus Klingler</li>
+        <li class="list-group-item">Florian Klingler</li>
+      </ul>
+    </div>
   </div>
 </div>
