--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,10 @@
   <head>
     {% include header.html %}
   </head>
-  <body>
+  <body class="light-bg-subtle">
     {% include navigation.html %}
     <!-- Content -->
-    <div class="container mt-3">
+    <div class="container mt-5 pt-5">
       <h2>{{ page.title }}</h2>
       <hr>
       <div class="row">
