--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,17 +1,31 @@
 <!-- Footer -->
 <div class="container-fluid" id="footer">
-    <div class="footernav">
-		<ul>
-            <li>
-                <a href="{% link legal/impressum.html %}">Impressum</a>
-            </li>
-            <li>
-                <a href="{% link legal/kontakt.html %}">Kontakt</a>
-            </li>
-            <li>
-                <a href="{% link legal/datenschutz.html %}">Datenschutz</a>
-            </li>
-        </ul>
+    <div class="row gy-1">
+        <div class="col-6 col-md-3 col-lg-2 offset-3 offset-md-0">
+            <a href="/">
+                <img src="/assets/media/mv-logo.svg" alt="MV-Logo" width="100%">
+            </a>
+        </div>
+        <div class="col-12 col-md-3 col-lg-2 offset-md-6 offset-lg-8">
+            <!--<div class="footernav">
+                <ul>
+                    <li>
+                        <a href="{% link legal/impressum.html %}">Impressum</a>
+                    </li>
+                    <li>
+                        <a href="{% link legal/kontakt.html %}">Kontakt</a>
+                    </li>
+                    <li>
+                        <a href="{% link legal/datenschutz.html %}">Datenschutz</a>
+                    </li>
+                </ul>
+            </div>-->
+            <nav class="nav flex-column nav-underline text-center text-md-end">
+                <a class="nav-link {% if page.url == '/legal/impressum.html' %}active{% endif %}" aria-current="{%if page.url == '/impressum.html' %}page{% endif %}" href="{% link legal/impressum.html %}">Impressum</a>
+                <a class="nav-link {% if page.url == '/legal/kontakt.html' %}active{% endif %}" aria-current="{%if page.url == '/kontakt.html' %}page{% endif %}" href="{% link legal/kontakt.html %}">Kontakt</a>
+                <a class="nav-link {% if page.url == '/legal/datenschutz.html' %}active{% endif %}" aria-current="{%if page.url == '/datenschutz.html' %}page{% endif %}" href="{% link legal/datenschutz.html %}">Datenschutz</a>
+            </nav>
+        </div>
     </div>
 </div>
 <!-- Footer End -->
