--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,34 +1,33 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="light">
+<nav class="shadow-lg navbar fixed-top navbar-expand-lg bg-primary" data-bs-theme="dark">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <a class="navbar-brand" href="/">
-        {{ site.title }}
+            {{ site.title }}
         </a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav d-flex">
+            <ul class="navbar-nav nav-underline d-flex">
                 <li class="nav-item">
-                    <a class="nav-link {% if page.url == '/partnerkapelle.html' %}active{% endif %}" aria-current="{%if page.url == '/partnerkapelle.html' %}page{% endif %}" href="{% link partnerkapelle.html %}">Partner</a>
+                    <a class="nav-link {% if page.url == '/mitglieder.html' %}active{% endif %}" aria-current="{%if page.url == '/mitglieder.html' %}page{% endif %}" href="{% link mitglieder.html %}">Die Kapelle</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if page.url == '/vorstandschaft.html' %}active{% endif %}" aria-current="{%if page.url == '/vorstandschaft.html' %}page{% endif %}" href="{% link vorstandschaft.html %}">Die Vorstandschaft</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link {% if page.url == '/jugend.html' %}active{% endif %}" aria-current="{%if page.url == '/jugend.html' %}page{% endif %}" href="{% link jugend.html %}">Jugend</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link {% if page.url == '/downloads.html' %}active{% endif %}" aria-current="{%if page.url == '/downloads.html' %}page{% endif %}" href="{% link downloads.html %}">Downloads</a>
+                    <a class="nav-link {% if page.url == '/historie.html' %}active{% endif %}" aria-current="{%if page.url == '/historie.html' %}page{% endif %}" href="{% link historie.html %}">Historie</a>
                 </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Der Verein <span class="caret"></span>
-                  </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="{% link der-verein/historie.html %}">Historie</a></li>
-                    <li><a class="dropdown-item" href="{% link der-verein/vorstandschaft.html %}">Die Vorstandschaft</a></li>
-                    <li><a class="dropdown-item" href="{% link der-verein/mitglieder.html %}">Die Kapelle</a></li>
-                  </ul>
+                <li class="nav-item">
+                    <a class="nav-link {% if page.url == '/partnerkapelle.html' %}active{% endif %}" aria-current="{%if page.url == '/partnerkapelle.html' %}page{% endif %}" href="{% link partnerkapelle.html %}">Partner</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link {% if page.url == '/downloads.html' %}active{% endif %}" aria-current="{%if page.url == '/downloads.html' %}page{% endif %}" href="{% link downloads.html %}">Downloads</a>
                 </li>
             </ul>
         </div>
