--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,9 +21,9 @@
                 </ul>
             </div>-->
             <nav class="nav flex-column nav-underline text-center text-md-end">
-                <a class="nav-link {% if page.url == '/legal/impressum.html' %}active{% endif %}" aria-current="{%if page.url == '/impressum.html' %}page{% endif %}" href="{% link legal/impressum.html %}">Impressum</a>
-                <a class="nav-link {% if page.url == '/legal/kontakt.html' %}active{% endif %}" aria-current="{%if page.url == '/kontakt.html' %}page{% endif %}" href="{% link legal/kontakt.html %}">Kontakt</a>
-                <a class="nav-link {% if page.url == '/legal/datenschutz.html' %}active{% endif %}" aria-current="{%if page.url == '/datenschutz.html' %}page{% endif %}" href="{% link legal/datenschutz.html %}">Datenschutz</a>
+                <a class="nav-link link-secondary {% if page.url == '/legal/impressum.html' %}active{% endif %}" aria-current="{%if page.url == '/impressum.html' %}page{% endif %}" href="{% link legal/impressum.html %}">Impressum</a>
+                <a class="nav-link link-secondary {% if page.url == '/legal/kontakt.html' %}active{% endif %}" aria-current="{%if page.url == '/kontakt.html' %}page{% endif %}" href="{% link legal/kontakt.html %}">Kontakt</a>
+                <a class="nav-link link-secondary {% if page.url == '/legal/datenschutz.html' %}active{% endif %}" aria-current="{%if page.url == '/datenschutz.html' %}page{% endif %}" href="{% link legal/datenschutz.html %}">Datenschutz</a>
             </nav>
         </div>
     </div>
