--- a/_includes/kapelle/floete.html
+++ b/_includes/kapelle/floete.html
@@ -2,7 +2,7 @@
   <div class="card">
     <img src='/assets/media/register/07_floete.webp' class="card-img-top">
     <div class="card-body">
-      <h3 class="card-title">Klarinette</h3>
+      <h3 class="card-title">Flöte</h3>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">Clara Helmich</li>
         <li class="list-group-item">Lisa-Marie Heck</li>
