--- a/_includes/kapelle/klarinette.html
+++ b/_includes/kapelle/klarinette.html
@@ -12,6 +12,8 @@
         <li class="list-group-item">Katja Beiter</li>
         <li class="list-group-item">Joanna Mindreanu</li>
         <li class="list-group-item">Nina Hermanutz</li>
+        <li class="list-group-item">Eva-Maria Wendelstein</li>
+        <li class="list-group-item">Katharina Schneider</li>
       </ul>
     </div>
   </div>
