--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     {% include navigation.html %}
     <!-- Content -->
     <div class="container mt-5 pt-5">
-      <h2>{{ page.title }}</h2>
+      <h2>{{ page.header }}</h2>
       <hr>
       <div class="row">
       {{ content }}
