--- a/_includes/kapelle/dirigent.html
+++ b/_includes/kapelle/dirigent.html
@@ -1,10 +1,10 @@
 <div class="item">
   <div class="card">
-    <img src='/assets/media/register/06_Dirigent.webp' class="card-img-top">
+    <img src='/assets/media/register/dirigent.jpg' class="card-img-top">
     <div class="card-body">
       <h3 class="card-title">Dirigent</h3>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">Oliver Martini</li>
+        <li class="list-group-item">Johannes Schuler</li>
       </ul>
     </div>
   </div>
